--- a/student-management/src/app/app.component.css
+++ b/student-management/src/app/app.component.css
@@ -1,4 +1,10 @@
 .navbar a {
     color: blue;
   }
-  
+
+  .logout {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    color: red;
+  }
