--- a/student-management/src/app/components/list-student/list-student.component.html
+++ b/student-management/src/app/components/list-student/list-student.component.html
@@ -1,5 +1,9 @@
 <h3 class="heading">Student List</h3>
 
+<div>
+  <app-search (searchTextChanged)="onSearchTextEntered($event)"></app-search>
+</div>
+
 <table class="table">
   <thead>
     <tr>
@@ -14,19 +18,22 @@
     </tr>
   </thead>
   <tbody>
-    <tr *ngFor="let item of studentData">
-      <td scope="row">{{item.id}}</td>
-      <td>{{item.firstName}}</td>
-      <td>{{item.lastName}}</td>
-      <td>{{item.gender}}</td>
-      <td>{{item.dateOfBirth}}</td>
-      <td>{{item.email}}</td>
-      <td>{{item.type}}</td>
-      <td>
-        <i (click)="deleteStudent(item.id)" class="fa fa-trash"></i>
-        &nbsp;
-        <a routerLink="/edit/{{item.id}}"><i class="fa fa-edit"></i></a>
-      </td>
-    </tr>
+    <ng-container *ngFor="let item of studentData">
+      <tr *ngIf = "searchText === '' || item.firstName.includes(searchText) ">
+        <td scope="row">{{item.id}}</td>
+        <td>{{item.firstName}}</td>
+        <td>{{item.lastName}}</td>
+        <td>{{item.gender}}</td>
+        <td>{{item.dateOfBirth}}</td>
+        <td>{{item.email}}</td>
+        <td>{{item.type}}</td>
+        <td>
+          <i (click)="deleteStudent(item.id)" class="fa fa-trash"></i>
+          &nbsp;
+          <a routerLink="/edit/{{item.id}}"><i class="fa fa-edit"></i></a>
+        </td>
+      </tr>
+    </ng-container>
+
   </tbody>
 </table>
