--- a/student-management/src/app/app.component.html
+++ b/student-management/src/app/app.component.html
@@ -1,7 +1,7 @@
 <h1 align="center">Student Management System</h1>
 
 <nav class="navbar navbar-expand-lg bg-body-tertiary mx-auto" style="width: 30%;" *ngIf="!isLoggedIn">
-  <div  class="container-fluid text-center">
+  <div  class="container-fluid text-center" >
     <a class="navbar-brand" href="#">Navbar</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
       aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -9,9 +9,9 @@
     </button>
     <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
       <ul class="navbar-nav">
-        <li class="nav-item"><a class="nav-link" routerLink="add">Add Student</a></li>
+        <li class="nav-item" routerLinkActive="active"><a class="nav-link" routerLink="add">Add Student</a></li>
 <!--        <li class="nav-item"><a class="nav-link" routerLink="list">List Student</a></li> -->
-        <li class="nav-item"><a class="nav-link" routerLink="login">Login Student</a></li>
+        <li class="nav-item" routerLinkActive="active"><a class="nav-link" routerLink="login">Login Student</a></li>
 
       </ul>
     </div>
